css/extra.css
.post-meta {
  font-size: small-font-size;
  color: grey-color;
  margin-bottom: .5em;
  margin-top: .5em;
}

.post-link {
  display: block;
  font-size: 24px;
}

.post {
  margin-bottom: 4em;
  border-bottom: 1px solid #eee;
}

.panel-borderless {
    border: 0;
    box-shadow: none;
}

.well {
    border: 0;
    box-shadow: none;
}

.navbar {
  border: 0;
}

.navbar-default .navbar-brand {
  color: #333;
}
/* .navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #5e5e5e;
  background-color: transparent;
} */

.navbar-default .navbar-text {
  color: #333;
}
.navbar-default .navbar-nav > li > a {
  color: #333;
}

.breadcrumb > .active {
  color: #333;
}

pre {
    color: #c7254e;
}

/* p {
  text-align: justify;
}

li {
  text-align: justify;
} */

details {
  border: 1px solid #aaaaaa;
  border-radius: 4px;
  padding: 0.5em 0.5em 0;
}

summary {
  font-weight: bold;
  margin: -0.5em -0.5em 0;
  padding: 0.5em;
}

details[open] {
  padding: 0.5em;
}

details[open] summary {
  border-bottom: 1px solid #aaaaaa;
  margin-bottom: 0.5em;
}

body {
  font-size: 18px;
}

.mytooltip {
  position: relative;
  cursor: pointer;
  border-bottom: 1px dotted black;
  display: inline-block;
  color: black;
}

.mytooltip .tooltip-text {
  visibility: hidden;
  position: absolute;
  bottom: 125%;
  left: 50%;
  transform: translateX(-50%);
  background-color: #333 !important;
  color: white !important;
  padding: 6px 10px;
  border-radius: 4px;
  white-space: nowrap;
  font-size: 14px;
  z-index: 999;
}

.mytooltip:hover .tooltip-text {
  visibility: visible !important;
}

